# smart-wheel-engine

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_REPORT_2026-04-06.md  CHANGELOG.md  CLAUDE.md  CLAUDE_WEB_UX_AUDIT.md  CODEX_BACKEND_AUDIT.md  COMMIT_GUIDE.md  CONTRIBUTING.md  Claude_Prompting_Master_Guide.md  DATA_POLICY.md  DECISIONS.md  FILE_MANIFEST.md  HEAVY_VERIFY_FINDINGS_2026-06-09.md  LAPTOP_SETUP.md  LAUNCH_AUDIT_PROMPT.md  LAUNCH_READINESS.md  LICENSE  MODULE_INDEX.md  PROJECT_STATE.md  README.md  ROADMAP.md  TESTING.md  TESTING_PROMPT.md  TRADINGVIEW_INTEGRATION.md  USAGE_TEST_LEDGER.md  _scan_tests.txt  audit.py  conftest.py  coverage.json  engine_api.py  fetch_data.bat  morning_run.py  pull_branch.bat  pyproject.toml  requirements.txt  test_transaction_costs.py  (+1 more)
.github/: pull_request_template.md
Human_Prompts/: Optimization Prompt.txt  Parallel Agents Prompt.txt
advisors/: __init__.py  base.py  buffett.py  committee.py  integration.py  munger.py  schema.py  scorecard.py  simons.py  taleb.py
archive/: README.md
backtests/: __init__.py  simulator.py  survivorship.py  walk_forward.py
config/: __init__.py  settings.py
dashboard/: .env.example  .gitignore  README.md  __init__.py  drizzle.config.ts  package-lock.json  package.json  quant_dashboard.py  web_vitals.py
data/: __init__.py  bloomberg.py  bloomberg_import.py  bloomberg_loader.py  broad_pull_loaders.py  consolidated_loader.py  feature_pipeline.py  feature_provenance.py  feature_store.py  observability.py  orchestrator.py  pipeline.py  quality.py
data_raw/: sp500_constituents_current.csv
docs/: ADVERSARIAL_WEAKNESS_REVIEW_2026-06-15.md  AGENT_VERIFICATION_WORKFLOW.md  AUDIT_OF_AUDIT_REVIEW.md  AUDIT_PROMPT.md  BACKTEST_REGRESSION_CAMPAIGN.md  BLOOMBERG_PULL_LIST.md  BLOOMBERG_TERMINAL_NEXT_SESSION.md  BRAIN_AUDIT_2026-06-11.md  CASY_BACKFILL_SPEC.md  CODEX_REVIEW_PROMPT.md  CODE_REVIEW_2026-05-30.md  CONTRIBUTING.md  DASHBOARD_TERMINAL.md  DATA_ACQUISITION_PLAN_2026-06-14.md  DATA_ACQUISITION_ROADMAP.md  DATA_COLLECTION_REPORT.md  DATA_ENGINE_AUDIT_2026-06-07.md  DATA_FIX_2026-06-28_OHLCV_SPLIT_SCALE_439.md  DATA_INVENTORY.md  DATA_LAYER_ACTIVATION_ROADMAP.md  DATA_LAYER_DEEP_READ_DESIGN.md  DATA_POLICY.md  DATA_SPECIFICATION.md  DATA_TEST_AUDIT_2026-06-09.md  EDGAR_EARNINGS.md  END_TO_END_REVIEW_2026_05_25.md  ENGINE_BACKTEST_2022_2024.md  ENGINE_BACKTEST_2022_2024_IV_PIT_RERUN.md  ENGINE_BACKTEST_S32_FRICTION.md  ENGINE_BACKTEST_S32_REBASELINE_POST260.md  ENGINE_BACKTEST_S34_REBASELINE_POST260.md  ENGINE_BACKTEST_S34_UNIVERSE.md  ENGINE_BACKTEST_S35_OUT_OF_WINDOW.md  ENGINE_BACKTEST_S38_MULTIWINDOW.md  ENGINE_BACKTEST_S40_ROLLING_MULTIWINDOW.md  ENGINE_BACKTEST_S41_F4_FIX_VALIDATION.md  ENGINE_BACKTEST_S41_ROLLING_MULTIWINDOW.md  ENGINE_BACKTEST_S43_ROLLING_MULTIWINDOW.md  ENGINE_BACKTEST_S43_S38_POSTF4_RERUN.md  ENGINE_BACKTEST_S44_S38_POSTF4_RERUN.md  (+82 more)
engine/: __init__.py  binomial_tree.py  candidate_dossier.py  chart_context.py  contracts.py  data_connector.py  data_integration.py  dealer_positioning.py  dependency_check.py  earnings_drift.py  ev_engine.py  event_calendar.py  event_gate.py  forward_distribution.py  ibkr_portfolio_adapter.py  mcp_client.py  model_validation.py  monte_carlo.py  news_sentiment.py  observability.py  option_pricer.py  payoff_engine.py  performance_metrics.py  policy_config.py  portfolio_copula.py  portfolio_intelligence.py  portfolio_risk_gates.py  portfolio_tracker.py  realized_vol.py  regime_detector.py  regime_hmm.py  risk_manager.py  shared_valuation.py  signal_context.py  signals.py  skew_dynamics.py  strangle_timing.py  stress_testing.py  tail_risk.py  theta_connector.py  (+7 more)
features/: label_expiry_outcomes.py  trade_universe.py
financial_news/: __init__.py  models.py  pipeline.py  scheduler.py  schema.py  verification_engine.py
local_agent/: __init__.py  main.py  mcp_server.py
ml/: __init__.py  earnings_model.py  model_governance.py  wheel_model.py
news_pipeline/: __init__.py  config.py  integration.py  orchestrator.py  publisher.py  slo.py
scripts/: _bbg_panel.py  audit_api_smoke.py  audit_data_engine.py  audit_data_tests.py  audit_data_wiring.py  audit_full_wheel.py  audit_output_realism.py  audit_prob_profit_calibration.py  audit_risk_free_pit.py  audit_tail_cvar.py  audit_topbin_netcost.py  audit_w1_data_wiring_reverify.py  audit_w2_output_realism_reverify.py  backfill_features.py  bloomberg_bql_pulls.md  bloomberg_excel_extractor_v2.bas  bloomberg_export.vba  bloomberg_formulas.txt  bloomberg_smoke.py  check_doc_currency.py  check_env.py  check_lane_claim.py  check_manifest_coverage.py  dashboard_refresh.py  diagnose_candidates.py  diagnose_iv_surface.py  dividends_formulas.txt  download_ohlcv.py  download_sp500_constituents.py  download_yf_ohlcv.py  download_yf_options.py  earnings_formulas.txt  export_sheets_to_csv.vba  feature_smoke_test.py  fix_ohlcv_split_scale_439.py  gen_worklog_index.py  generate_tested_surface_map.py  ibkr_ev_calibration.py  ibkr_flex_ledger.py  ibkr_gateway_pull.py  (+61 more)
src/: __init__.py
staging/: BROAD_PULL_MANIFEST.md  integrate_phase1b.py
tests/: __init__.py  quant_benchmarks.py  test_advanced_quant.py  test_adversarial_news.py  test_advisors.py  test_asof_none_staleness.py  test_audit_improvements.py  test_audit_invariants.py  test_audit_viii_e2e.py  test_audit_viii_real_data_smoke.py  test_audit_viii_unit_invariants.py  test_authority_hardening.py  test_available_buying_power.py  test_backtest_regression.py  test_binomial_tree.py  test_bloomberg_loader.py  test_book_selection.py  test_broad_pull_loaders.py  test_broad_pull_wiring_xfail.py  test_check_lane_claim.py  test_check_manifest_coverage.py  test_common_realized_pnl.py  test_consume_ranker_row_anchor.py  test_contracts.py  test_corp_action_gate.py  test_covered_call_ranker.py  test_credit_rating_population.py  test_dashboard.py  test_data_connector.py  test_data_connector_ticker_filter.py  test_data_integration.py  test_data_integrity_bloomberg.py  test_data_pipeline.py  test_data_quality.py  test_data_to_engine.py  (+133 more)
(+712 files in other folders)
