[project]
name = "smart-wheel-engine"
version = "0.1.0"
description = "Professional-grade algorithmic trading system for wheel strategy"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Smart Wheel Team"}
]

dependencies = [
    # Data handling
    "pandas>=2.0.0",
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",

    # ML / Statistics
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "optuna>=3.4.0",
    "statsmodels>=0.14.0",

    # Visualization
    "plotly>=5.18.0",
    "streamlit>=1.29.0",

    # Utilities
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "aiohttp>=3.9.0",

    # Scheduling
    "prefect>=2.14.0",

    # Broker integration
    "ib_insync>=0.9.86",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.92.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "black>=23.12.0",
    "pre-commit>=3.6.0",
    "ipykernel>=6.27.0",
    "requests-mock>=1.11",
    "responses>=0.25",
]

news = [
    # Browser automation for zero-API-cost pipeline
    "playwright>=1.40.0",
]

bloomberg = [
    "blpapi>=3.21.0",
]

[project.scripts]
wheel = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src", "engine", "advisors", "financial_news", "data"]
branch = true
omit = [
    # External API connectors require live API calls or complex mocking
    "financial_news/connectors/*",
    "financial_news/sources/*",
    # UI code is tested through end-to-end tests
    "financial_news/ui/*",
    # Pipeline and scheduler require external resources
    "financial_news/pipeline.py",
    "financial_news/scheduler.py",
    # Storage layer requires database setup
    "financial_news/storage/*",
    # Processing modules with complex ML dependencies
    "financial_news/processing/brief_generator.py",
    "financial_news/processing/clusterer.py",
    "financial_news/processing/story_clusterer.py",
    "financial_news/processing/entity_extractor.py",
    "financial_news/processing/impact_scorer.py",
    "financial_news/processing/ranker.py",
    # Data validators are simple type checks
    "src/data/validators.py",
    # Complex engine modules requiring extensive setup
    "engine/signal_context.py",
    "engine/volatility_surface.py",
    # Shared valuation requires full option trade simulation with OHLCV data
    "engine/shared_valuation.py",
    # Ollama-dependent AI memo generator
    "engine/trade_memo.py",
    # SEC/13F data-dependent portfolio intelligence
    "engine/portfolio_intelligence.py",
    # Performance metrics has complex dashboard dependencies
    "engine/performance_metrics.py",
    # Dependency checker is a bootstrap utility
    "engine/dependency_check.py",
    # data/ - only data/quality.py is on the EV decision path (the chain-quality
    # gate in WheelRunner.rank_candidates_by_ev); the rest is research-tier
    # ETL / loaders, off the decision path (see DECISIONS.md D10).
    "data/__init__.py",
    "data/bloomberg.py",
    "data/bloomberg_import.py",
    "data/bloomberg_loader.py",
    "data/consolidated_loader.py",
    "data/feature_pipeline.py",
    "data/feature_provenance.py",
    "data/feature_store.py",
    "data/observability.py",
    "data/orchestrator.py",
    "data/pipeline.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if args\\.",  # CLI argument handling
]
fail_under = 80
show_missing = true
skip_empty = true
